Added a thirg paragraph

--- a/CS_WhyChoose.html
+++ b/CS_WhyChoose.html
@@ -21,6 +21,12 @@
     The other limit is yourself.  The more you know about Computer Science, the more you can make full usage of this potential.  The good news here, is
     you can learn all the necessary tools and abilities by majoring in Computer Science.  In little time, you can be navigating this vast virtual world with ease.
 </p1>
+<h2>
+    Other reasons?
+</h2>
+<p1>
+    Cause we're the best, obivously.
+</p1>
 </body>
 
 
