Updated learnmore, experience, and career

--- a/cs_career.html
+++ b/cs_career.html
@@ -49,18 +49,27 @@ div.a {
         <a href="#cs_experience">Experience</a>
       </div>
 <div class="center">
-<title>Learn more about Computer Science</title>
+<title>A Career in Computer Science</title>
 </head>
 <body>
 <p style="color:white; font-size: 30px;"><u>Computer Science</u></p>
-<h1 style="color:white;">The Computer Science Experience</h1>
+<h1 style="color:white;">A Career in Computer Science</h1>
 <p style="color:white;">Computer science is a very extensive and evolving field. Its is easy to get overwhelmed with all there is to learn.
 This page will help guide you as you begin your journey into the world of programming. </p>
 
 <img src="C:\Users\kaida\Pictures\Computer Science Site\computer science.jpg" alt="CS" width="500" height="333">
-<h2 style="color:white;">Programming</h2>
-<h3 style="color:white;">Learning</h3>
-<h4 style="color:white;">Collaborating</h4>
+<h2 style="color:white;">Possible Computer Science Jobs</h2>
+<ul style="color:white;">
+    <li>Software Developer</li>
+    <li>Database Administrator</li>
+    <li>Computer Hardware Engineer</li>
+    <li>Computer Systems Analyst</li>
+    <li>Computer Network Architect</li>
+    <li>Web Developer</li>
+    <li>Information Security Analyst</li>
+    <li>Computer and Information Research Scientists</li>
+    <li>Computer and Information Systems Managers</li>
+  </ul>
 
 <img src="C:\Users\kaida\Pictures\Computer Science Site\computersciencelaptopscreen.jpeg" alt="CS" width="500" height="333">
 
