--- a/cs_learnmore.html
+++ b/cs_learnmore.html
@@ -41,6 +41,7 @@ div.a {
   width: 60%;
   padding: 10px;
 }
+
 </style>
 <body>
     <div class="scrollmenu">
@@ -53,14 +54,22 @@ div.a {
 </head>
 <body>
 <p style="color:white; font-size: 30px;"><u>Computer Science</u></p>
-<h1 style="color:white;">The Computer Science Experience</h1>
+<h1 style="color:white;">Learn more about Computer Science</h1>
 <p style="color:white;">Computer science is a very extensive and evolving field. Its is easy to get overwhelmed with all there is to learn.
 This page will help guide you as you begin your journey into the world of programming. </p>
 
 <img src="C:\Users\kaida\Pictures\Computer Science Site\computer science.jpg" alt="CS" width="500" height="333">
-<h2 style="color:white;">Programming</h2>
-<h3 style="color:white;">Learning</h3>
-<h4 style="color:white;">Collaborating</h4>
+<h2 style="color:white;">Main Computer Science Fields</h2>
+<ul style="color:white;">
+    <li>Computer Science with Cybersecurity</li>
+    <li>Computer Science with Business</li>
+    <li>Computer Science with Gaming and Animation</li>
+  </ul>
+<h3 style="color:white;">Computer Science with Cybersecurity</h3>
+<p style="color:white;">Computer Science with Cybersecurity entails learning skills such as </p>
+<img src="C:\Users\kaida\Pictures\Computer Science Site\computersciencelaptopscreen.jpeg" alt="CS" width="500" height="333">
+<h4 style="color:white;">Computer Science with Business</h4>
+<p style="color:white;">XXXXXXXXXXXXXXXXXX</p>
 
 <img src="C:\Users\kaida\Pictures\Computer Science Site\computersciencelaptopscreen.jpeg" alt="CS" width="500" height="333">
 
