Changed picture locations

--- a/cs_experience.html
+++ b/cs_experience.html
@@ -57,12 +57,12 @@ div.a {
 <p style="color:white;">Computer science is a very extensive and evolving field. Its is easy to get overwhelmed with all there is to learn.
 This page will help guide you as you begin your journey into the world of programming. </p>
 
-<img src="C:\Users\kaida\Pictures\Computer Science Site\computer science.jpg" alt="CS" width="500" height="333">
+<img src="computer science.jpg" alt="CS" width="500" height="333">
 <h2 style="color:white;">Programming</h2>
 <h3 style="color:white;">Learning</h3>
 <h4 style="color:white;">Collaborating</h4>
 
-<img src="C:\Users\kaida\Pictures\Computer Science Site\computersciencelaptopscreen.jpeg" alt="CS" width="500" height="333">
+<img src="computersciencelaptopscreen.jpeg" alt="CS" width="500" height="333">
 
 
 <p style="color:white;">The following links are a great reference for learning more about computer science as a career.</p>
