--- a/cs_learnmore.html
+++ b/cs_learnmore.html
@@ -58,7 +58,7 @@ div.a {
 <p style="color:white;">Computer science is a very extensive and evolving field. Its is easy to get overwhelmed with all there is to learn.
 This page will help guide you as you begin your journey into the world of programming. </p>
 
-<img src="C:\Users\kaida\Pictures\Computer Science Site\computer science.jpg" alt="CS" width="500" height="333">
+<img src="computer science.jpg" alt="CS" width="500" height="333">
 <h2 style="color:white;">Main Computer Science Fields</h2>
 <ul style="color:white;">
     <li>Computer Science with Cybersecurity</li>
@@ -67,11 +67,11 @@ This page will help guide you as you begin your journey into the world of progra
   </ul>
 <h3 style="color:white;">Computer Science with Cybersecurity</h3>
 <p style="color:white;">Computer Science with Cybersecurity entails learning skills such as </p>
-<img src="C:\Users\kaida\Pictures\Computer Science Site\computersciencelaptopscreen.jpeg" alt="CS" width="500" height="333">
+<img src="computersciencelaptopscreen.jpeg" alt="CS" width="500" height="333">
 <h4 style="color:white;">Computer Science with Business</h4>
 <p style="color:white;">XXXXXXXXXXXXXXXXXX</p>
 
-<img src="C:\Users\kaida\Pictures\Computer Science Site\computersciencelaptopscreen.jpeg" alt="CS" width="500" height="333">
+<img src="computersciencelaptopscreen.jpeg" alt="CS" width="500" height="333">
 
 
 <p style="color:white;">The following links are a great reference for learning more about computer science as a career.</p>
