edit menu links

--- a/cs_learnmore.html
+++ b/cs_learnmore.html
@@ -45,9 +45,9 @@ div.a {
 </style>
 <body>
     <div class="scrollmenu">
-        <a href="#cs_learnmore">Learn More</a>
-        <a href="#cs_career">Careers</a>
-        <a href="#cs_experience">Experience</a>
+        <a href="cs_learnmore.html">Learn More</a>
+        <a href="cs_career.html">Careers</a>
+        <a href="cs_experience.html">Experience</a>
       </div>
 <div class="center">
 <title>Learn more about Computer Science</title>
