--- a/cs_career.html
+++ b/cs_career.html
@@ -57,7 +57,7 @@ div.a {
 <p style="color:white;">Computer science is a very extensive and evolving field. Its is easy to get overwhelmed with all there is to learn.
 This page will help guide you as you begin your journey into the world of programming. </p>
 
-<img src="computer science.jpg" alt="CS" width="500" height="333">
+<img src="csjob2.jpg" alt="CS" width="800" height="333">
 <h2 style="color:white;">Possible Computer Science Jobs</h2>
 <ul style="color:white;">
     <li>Software Developer</li>
@@ -71,7 +71,7 @@ This page will help guide you as you begin your journey into the world of progra
     <li>Computer and Information Systems Managers</li>
   </ul>
 
-<img src="computersciencelaptopscreen.jpeg" alt="CS" width="500" height="333">
+<img src="csjobpic.jpg" alt="CS" width="500" height="333">
 
 
 <p style="color:white;">The following links are a great reference for learning more about computer science as a career.</p>
