Cleanup on pages

--- a/cs_experience.html
+++ b/cs_experience.html
@@ -54,13 +54,19 @@ div.a {
 <body>
 <p style="color:white; font-size: 30px;"><u>Computer Science</u></p>
 <h1 style="color:white;">The Computer Science Experience</h1>
-<p style="color:white;">Computer science is a very extensive and evolving field. Its is easy to get overwhelmed with all there is to learn.
-This page will help guide you as you begin your journey into the world of programming. </p>
+<p style="color:white;">Computer science is a very extensive and evolving field. Its is easy to get overwhelmed with all there is to learn.</p>
+<p style="color:white;">The primary things you will do as a computer scientist is program, learn and collaborate.</p>
 
 <img src="programmingpic.jpeg" alt="CS" width="500" height="333">
 <h2 style="color:white;">Programming</h2>
+<p style="color:white;">Programming is the core of what all computer scientists do. Coding can allow you to create abstractions of objects that can be seen in real life. You also have the 
+ability to work on projects with code that can help make everday jobs easier.</p>
 <h3 style="color:white;">Learning</h3>
+<p style="color:white;">Computer science is one of the most evolving fields to date. As a result, you will frequently be learning and adapting to new technologyies
+and languages that appear throughout your career. Computer science is an ongoing learning experience that can span across a lifetime.</p>
 <h4 style="color:white;">Collaborating</h4>
+<p style="color:white;">As you grow as a computer scientist, you will work on many projects that require you to work on a team. This can be a crucial experience in your development as a team member
+in the computer science world. While it may be difficult at first, learning to work with others can be extremely rewarding.</p>
 
 <img src="csprogramming.jpg" alt="CS" width="500" height="333">
 
