--- a/cs_learnmore.html
+++ b/cs_learnmore.html
@@ -59,6 +59,7 @@ div.a {
 This page will help guide you as you begin your journey into the world of programming. </p>
 
 <img src="computer science.jpg" alt="CS" width="500" height="333">
+
 <h2 style="color:white;">Main Computer Science Fields</h2>
 <ul style="color:white;">
     <li>Computer Science with Cybersecurity</li>
@@ -66,10 +67,11 @@ This page will help guide you as you begin your journey into the world of progra
     <li>Computer Science with Gaming and Animation</li>
   </ul>
 <h3 style="color:white;">Computer Science with Cybersecurity</h3>
-<p style="color:white;">Computer Science with Cybersecurity entails learning skills such as </p>
+<p style="color:white;">Computer Science with Cybersecurity entails learning skills such as risk assesement and pen testing.</p>
 <img src="computersciencelaptopscreen.jpeg" alt="CS" width="500" height="333">
 <h4 style="color:white;">Computer Science with Business</h4>
-<p style="color:white;">XXXXXXXXXXXXXXXXXX</p>
+<p style="color:white;">Computer science with business lets you explore the computer science industry and gain experience in the industry.</p>
+<p style="color:white;">To learn more about computer science, it is best to visit a universty. Otherwise, here are some links to help you get started on your computer science career:</p>
 
 <img src="computersciencelaptopscreen.jpeg" alt="CS" width="500" height="333">
 
