Updated text in multiple pages

--- a/cs_career.html
+++ b/cs_career.html
@@ -47,6 +47,8 @@ div.a {
         <a href="cs_learnmore.html">Learn More</a>
         <a href="cs_career.html">Careers</a>
         <a href="cs_experience.html">Experience</a>
+        <a href="CS_Prepare.html">Prepare</a>
+        <a href="CS_WhyCHose.html">Choosing CS</a>
       </div>
 <div class="center">
 <title>A Career in Computer Science</title>
@@ -70,12 +72,8 @@ This page will help guide you as you begin your journey into the world of progra
     <li>Computer and Information Research Scientists</li>
     <li>Computer and Information Systems Managers</li>
   </ul>
-
+  
 <img src="csjobpic.jpg" alt="CS" width="500" height="333">
-
-
-<p style="color:white;">The following links are a great reference for learning more about computer science as a career.</p>
-
 </div>
 </body>
 </html>
