--- a/cs_experience.html
+++ b/cs_experience.html
@@ -41,12 +41,27 @@ div.a {
   width: 60%;
   padding: 10px;
 }
+h2{
+  font-size:25px;
+
+}
+h3{
+  font-size: 25px;
+
+}
+h4{
+  font-size: 25px;
+}
 </style>
 <body>
     <div class="scrollmenu">
         <a href="cs_learnmore.html">Learn More</a>
         <a href="cs_career.html">Careers</a>
         <a href="cs_experience.html">Experience</a>
+        <a href="CS_Prepare.html">Prepare</a>
+        <a href="CS_WhyCHose.html">Choosing CS</a>
+
+
       </div>
 <div class="center">
 <title>Learn more about Computer Science</title>
