--- a/cs_learnmore.html
+++ b/cs_learnmore.html
@@ -41,13 +41,36 @@ div.a {
   width: 60%;
   padding: 10px;
 }
+.list{
+  font-size: 15px;
+  color:white;
+}
 
+h3{
+  font-size: 25px;
+
+}
+h4{
+  font-size:25px;
+
+
+}
+h5{
+  font-size:25px;
+
+}
+
+h6{
+  font-size:15px;
+}
 </style>
 <body>
     <div class="scrollmenu">
         <a href="cs_learnmore.html">Learn More</a>
         <a href="cs_career.html">Careers</a>
         <a href="cs_experience.html">Experience</a>
+        <a href="CS_Prepare.html">Prepare</a>
+        <a href="CS_WhyCHose.html">Choosing CS</a>
       </div>
 <div class="center">
 <title>Learn more about Computer Science</title>
@@ -60,7 +83,7 @@ This page will help guide you as you begin your journey into the world of progra
 
 <img src="computer science.jpg" alt="CS" width="500" height="333">
 
-<h2 style="color:white;">Main Computer Science Fields</h2>
+<h2 style="color:white; font-size: 30px">Main Computer Science Fields</h2>
 <ul style="color:white;">
     <li>Computer Science with Cybersecurity</li>
     <li>Computer Science with Business</li>
@@ -70,13 +93,20 @@ This page will help guide you as you begin your journey into the world of progra
 <p style="color:white;">Computer Science with Cybersecurity entails learning skills such as risk assesement and pen testing.</p>
 <img src="computersciencelaptopscreen.jpeg" alt="CS" width="500" height="333">
 <h4 style="color:white;">Computer Science with Business</h4>
-<p style="color:white;">Computer science with business lets you explore the computer science industry and gain experience in the industry.</p>
+
+<p style="color:white;">Computer Science with Business lets you explore the computer science industry and gain experience in the industry.</p>
+
+<h5 style="color:white;">Computer Science with Gaming and Animation</h5>
+<p style="color:white;">Computer Science with Gaming and Animation lets you use your technical and creative skills to make an entertaining and engaging experience for players.</p>
+<h6 style="color:white;">Additional Information</h6>
 <p style="color:white;">To learn more about computer science, it is best to visit a universty. Otherwise, here are some links to help you get started on your computer science career:</p>
-
-<img src="computersciencelaptopscreen.jpeg" alt="CS" width="500" height="333">
-
-
-
+<div class="list">
+<ul>
+  <li><a href="https://www.oc.edu/academics/undergraduate-programs/computer-science">Oklahoma Christian Computer Science</a></li>
+  <br>
+ <li><a href="https://code.org/files/computer_science_is_foundational.pdf">Code.org</a></li>
+</ul>
+</div>
 </div>
 </body>
 </html>
