Trying the add again

--- a/cs_learnmore.html
+++ b/cs_learnmore.html
@@ -70,7 +70,7 @@ h6{
         <a href="cs_career.html">Careers</a>
         <a href="cs_experience.html">Experience</a>
         <a href="CS_Prepare.html">Prepare</a>
-        <a href="CS_WhyCHose.html">Choosing CS</a>
+        <a href="CS_WhyChoose.html">Choosing CS</a>
       </div>
 <div class="center">
 <title>Learn more about Computer Science</title>
