Added Index page as Home

--- a/CS_Prepare.html
+++ b/CS_Prepare.html
@@ -65,8 +65,9 @@
           font-size:15px;
         }
         </style>
-        <body>
-            <div class="scrollmenu">
+        
+                <div class="scrollmenu">
+                <a  href-"index.html">Home</a>
                 <a href="cs_learnmore.html">Learn More</a>
                 <a href="cs_career.html">Careers</a>
                 <a href="cs_experience.html">Experience</a>
