--- a/cs_career.html
+++ b/cs_career.html
@@ -43,16 +43,15 @@ div.a {
 }
 </style>
 <body>
-    <div class="scrollmenu">
-        <a href="cs_learnmore.html">Learn More</a>
-        <a href="cs_career.html">Careers</a>
-        <a href="cs_experience.html">Experience</a>
-        <a href="CS_Prepare.html">Prepare</a>
-
-        <a href="CS_WhyChoose.html">Choosing CS</a>
-
-      </div>
-<div class="center">
+                <div class="scrollmenu">
+                <a  href-"index.html">Home</a>
+                <a href="cs_learnmore.html">Learn More</a>
+                <a href="cs_career.html">Careers</a>
+                <a href="cs_experience.html">Experience</a>
+                <a href="CS_Prepare.html">Prepare</a>
+                <a href="CS_WhyChoose.html">Choosing CS</a>
+              </div>
+        <div class="center">
 <title>A Career in Computer Science</title>
 </head>
 <body>
