--- a/cs_experience.html
+++ b/cs_experience.html
@@ -54,18 +54,16 @@ h4{
 }
 </style>
 <body>
-    <div class="scrollmenu">
-        <a href="cs_learnmore.html">Learn More</a>
-        <a href="cs_career.html">Careers</a>
-        <a href="cs_experience.html">Experience</a>
-        <a href="CS_Prepare.html">Prepare</a>
+              <div class="scrollmenu">
+                <a  href-"index.html">Home</a>
+                <a href="cs_learnmore.html">Learn More</a>
+                <a href="cs_career.html">Careers</a>
+                <a href="cs_experience.html">Experience</a>
+                <a href="CS_Prepare.html">Prepare</a>
+                <a href="CS_WhyChoose.html">Choosing CS</a>
+              </div>
+        <div class="center">
 
-        <a href="CS_WhyChoose.html">Choosing CS</a>
-
-
-
-      </div>
-<div class="center">
 <title>Learn more about Computer Science</title>
 </head>
 <body>
