--- a/cs_learnmore.html
+++ b/cs_learnmore.html
@@ -65,15 +65,15 @@ h6{
 }
 </style>
 <body>
-    <div class="scrollmenu">
-        <a href="cs_learnmore.html">Learn More</a>
-        <a href="cs_career.html">Careers</a>
-        <a href="cs_experience.html">Experience</a>
-        <a href="CS_Prepare.html">Prepare</a>
-
-        <a href="CS_WhyChoose.html">Choosing CS</a>
-
-      </div>
+                <div class="scrollmenu">
+                <a  href-"index.html">Home</a>
+                <a href="cs_learnmore.html">Learn More</a>
+                <a href="cs_career.html">Careers</a>
+                <a href="cs_experience.html">Experience</a>
+                <a href="CS_Prepare.html">Prepare</a>
+                <a href="CS_WhyChoose.html">Choosing CS</a>
+              </div>
+        <div class="center">
 <div class="center">
 <title>Learn more about Computer Science</title>
 </head>
