--- a/index.html
+++ b/index.html
@@ -1,11 +1,67 @@
 <!DOCTYPE html>
-
 <html>
+<head>
+<style>
+div.scrollmenu {
+  background-color: #777;
+  margin:auto;
+  overflow: auto;
+  white-space: nowrap;
+}
 
-    <body>
-    <h1>How to prepare to be a Computer Science Major</h1>
+div.scrollmenu a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+  font-size: 25px;
+}
 
-    <p>Do a lot of CS stuff</p>
+div.scrollmenu a:hover {
+  background-color: #777;
+}
+body{
+    background-color: maroon;
+}
 
-    </body>
-</html>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.center {
+  margin: auto;
+  width: 60%;
+  padding: 10px;
+}
+div.a {
+  font-size: 40px;
+  margin: auto;
+  width: 60%;
+  padding: 10px;
+}
+</style>
+<body>
+            <div class="scrollmenu">
+                <a href-"index.html">Home</a>
+                <a href="cs_learnmore.html">Learn More</a>
+                <a href="cs_career.html">Careers</a>
+                <a href="cs_experience.html">Experience</a>
+                <a href="CS_Prepare.html">Prepare</a>
+                <a href="CS_WhyChoose.html">Choosing CS</a>
+              </div>
+        <div class="center">
+<body>
+<h1 style="color:white;">Home</h1>
+    <p1 style="color:white;">
+    Welcome!  You are likeley here because you are interested in some fashion or another about the field of Computer Science.  More specifically, studying Computer Science as a major in college.
+     
+    </p1>
+    <h1></h1>
+    <p1 style="color:white;">
+    We have prepared some resources for you to help inform you about the options and possibilities in choosing Computer Science.
+    </p1>
+    <img src="CS.jpg" alt="CS" width="800" height="333">
+</body>
+    
