--- a/cs_career.html
+++ b/cs_career.html
@@ -44,7 +44,7 @@ div.a {
 </style>
 <body>
                 <div class="scrollmenu">
-                <a  href-"index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="cs_learnmore.html">Learn More</a>
                 <a href="cs_career.html">Careers</a>
                 <a href="cs_experience.html">Experience</a>
