--- a/cs_experience.html
+++ b/cs_experience.html
@@ -55,7 +55,7 @@ h4{
 </style>
 <body>
               <div class="scrollmenu">
-                <a  href-"index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="cs_learnmore.html">Learn More</a>
                 <a href="cs_career.html">Careers</a>
                 <a href="cs_experience.html">Experience</a>
